--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -8,3 +8,9 @@
 // @use 'vuetify/settings' with (
 //   $color-pack: false
 // );
+
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400..800&display=swap");
+
+html{
+    overflow: auto;
+}
