--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -13,5 +13,8 @@
 
 html{
     overflow: auto;
-    // font-family: "Baloo Thambi 2", system-ui !important;
 }
+
+body, html {
+    user-select: none;
+  }
